  - Fixed defect #1450 Some DVDs don't have subtitle language info in mediainfo output resulting in blank lang. info
  - Fixed defect #1451 VideoImageScanner NullPointerException
  - Fixed defect #1458 Failed drawing Language logo to thumbnail file
  - Fixed defect #1459 ID -1 being ignored for TV shows
  - Fixed defect #1465 Sorting.strip.prefixes not working

MovieJukebox 1.9 (r1500)
------------------------
  - Fixed defect  #855 Year in TV series files names over rides season based year
  - Enhancement   #975 Reworking of jukebox clean up routine
  - Fixed defect  #981 Use poster.scanner.SearchPriority regardless of mjb.internet.plugin (other than IMDb)
  - Fixed defect #1013 Support for localised IMDB, e.g. (ES, FR, DE, etc)
  - Fixed defect #1155 YAMJ refuses to pickup fanart and poster for a movie
  - Enhancement  #1239 Plugin for www.comingsoon.it
  - Enhancement  #1277 Get all available IMDb information (actors, directors, genres, etc)
  - Fixed defect #1283 IMDB update for non-MPAA Certification
  - Fixed defect #1284 Comma divider missing when not all fields present in default skins
  - Fixed defect #1287 Bad extraction of TVDb id from NFO
  - Enhancement  #1282 Add movie poster FilmAffinity
  - Fixed defect #1289 Release Date or Premiered date is not being loaded from NFO file
  - Fixed defect #1290 FilmAffinity plot no longer retrieved from web site
  - Fixed defect #1293 FilmAffinity title is wrong for Spanish users
  - Enhancement  #1296 Force rescan of XML data if UNKNOWN exists, or XML is stale
  - Enhancement  #1298 List all indexes a movie appears in, in the XML
  - Fixed defect #1299 Parental controls broken
  - Enhancement  #1300 Modify play from index code to also play Disk Images
  - Fixed defect #1301 OFDB title isn't set anymore
  - Fixed defect #1302 Some plots are not retrieved from FilmAffinity even if the movie exist + Poster from www.caratulasdecine.com is not retrieved even if it exist